# videoLoraGenerationPipeline

./: .env.example  .gitignore  Makefile  README.md  bootstrap_init.py  pyproject.toml
cli/: main.py
configs/: dvd_job.example.yaml  scenedetect.yaml
dataprep/: core.py
scripts/: 01_detect_and_cut.ps1  02_build_metadata.py  03_stage_review.ps1  detect_scenes.py  rip_makemkv.ps1  rip_makemkv.sh  split_from_csv.py  stage_review.py
src/: __init__.py
src/cli/: main.py
src/dataprep/: core.py
