[project]
name = "wan21-lora-dataprep"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0.1",
  "pandas>=2.2",
  "scenedetect==0.6.*"
]

[project.scripts]
wan21-dp = "cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataprep", "cli"]
exclude = ["data*", "configs*", "scripts*"]
