[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wan21-lora-dataprep"
version = "0.1.0"
description = "WAN 2.1 LoRA data preparation CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich",
  "pandas",
  "numpy",
  "tqdm"
]

[project.scripts]
wan21-dp = "cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
